src/objects/Order.object
<CustomObject>
    <fields>
        <fullName>Total_After_PPN__c</fullName>
        <formula>Order_Amount_global__c -  PPN10__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total After PPN</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Bundle_Discount__c</fullName>
        <label>Total Bundle Discount</label>
        <summarizedField>Order_bundle__c.Order_Bundle_Discount_Amount__c</summarizedField>
        <summaryForeignKey>Order_bundle__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Order_Discount__c</fullName>
        <description>(Order Amount before Discount has been subtracted) MINUS (Order Amount after Discount has been substracted) = Order Discount</description>
        <formula>-(Order_amount_before_disc_globa__c  -   TotalAmount)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Order Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_bundle_product_in_the_order__c</fullName>
        <label>Total #bundle product in the order</label>
        <summaryForeignKey>Order_bundle__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_of_Products_on_this_Order__c</fullName>
        <label>Total # of Products on this Order</label>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>field for USC to manage special DOD offer</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>User_CountryPL__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>New Customer</fullName>
                </value>
                <value>
                    <fullName>New User 1+1</fullName>
                    <isActive>false</isActive>
                    <label>New User 1+1</label>
                </value>
                <value>
                    <fullName>New User 2+1</fullName>
                </value>
                <value>
                    <fullName>Tessera Trade Out B7,T3,G3</fullName>
                </value>
                <value>
                    <fullName>Trade In</fullName>
                </value>
                <value>
                    <fullName>Tradeout 1+1</fullName>
                    <isActive>false</isActive>
                    <label>Tradeout 1+1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>US_Telesales_Order__c</fullName>
        <formula>If(  US__c =True, True,
if(Owner:User.Profile.Id = &apos;00e0J000001Ar3p&apos;, True, False))</formula>
        <label>US Telesales Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>US_Telsales__c</fullName>
        <formula>CreatedBy.US_TeleSales_Team_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>US TeleSales Team Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field managed using approval process to track if in the order was created by a person that at the creation time had a Telesales profile</description>
        <label>US Telesales Order Historical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UsedCouponsValue__c</fullName>
        <label>Used Coupons Value</label>
        <summarizedField>OrderItem.UsedCouponValue__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UserCountryETM__c</fullName>
        <formula>text(Owner:User.User_Country__c)</formula>
        <label>UserCountryETM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_CountryPL__c</fullName>
        <label>User CountryPL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>BEX</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Distributor Markets</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>Estonia</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
                <value>
                    <fullName>Holland</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>HQ: DE</fullName>
                </value>
                <value>
                    <fullName>HQ: NL</fullName>
                </value>
                <value>
                    <fullName>HQ: SE</fullName>
                </value>
                <value>
                    <fullName>Hungary</fullName>
                </value>
                <value>
                    <fullName>INDIA</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Jordan</fullName>
                </value>
                <value>
                    <fullName>Kazakhstan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Geography__c</fullName>
        <formula>CreatedBy.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT_Number__c</fullName>
        <formula>if(isblank( Account.Vat_Registration_No__c ), IMAGE(&quot;/servlet/servlet.FileDownload?file=01520000000mkdN&quot;, &quot;KO&quot;, 30, 30) , Account.Vat_Registration_No__c )</formula>
        <label>VAT Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waive_Shipping_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this box is checked, the customer has requested free shipping. By checking this box, additional approvals will be required.</inlineHelpText>
        <label>Waive Shipping Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Was_this_Order_ever_put_ON_HOLD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Was this Order ever put ON HOLD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amount_of_foc_products_eith_currency__c</fullName>
        <description>To mantain the currency of the country for approval process</description>
        <formula>Amount_of_free_of_charge_products__c</formula>
        <label>amount of foc products with currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>items_for_free__c</fullName>
        <description>roll up on the products with 100% discount</description>
        <label># items for free</label>
        <summaryFilterItems>
            <field>OrderItem.Discount_Percent__c</field>
            <operation>equals</operation>
            <value>100</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>sample_products__c</fullName>
        <label># sample products</label>
        <summaryFilterItems>
            <field>OrderItem.Discount_Percent__c</field>
            <operation>equals</operation>
            <value>100</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OrderItem.Value_of_Samples_for_Sales_Rep__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>submitted_date__c</fullName>
        <label>submitted date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>total_discount_on_the_order_c__c</fullName>
        <description>The % discount doesn not count the percentage of discount in the bundle</description>
        <formula>if ((TotalAmount+ Order_bundle_amount__c)=0,0,( (TotalAmount+ Order_bundle_amount__c) - Order_Amount_global__c )/TotalAmount )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of total discount (discount on the product line + discount on the total order amount)</inlineHelpText>
        <label>% total discount on the order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <listViews>
        <fullName>All_Order</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>Distributor__c</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>ORDER.RECORDTYPE</columns>
        <columns>Order_Type__c</columns>
        <columns>Order_subtype__c</columns>
        <columns>Order_Amount_global__c</columns>
        <columns>total_discount_on_the_order_c__c</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>Total_of_Products_on_this_Order__c</columns>
        <columns>UserCountryETM__c</columns>
        <columns>User_Geography__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
        <sharedTo>
            <roleAndSubordinates>Benelux_CRM_Analyst</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CANIMPLANTS_CS_INBOX_ALL_Pending</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>Customer_Service_Rep_Responsible__c</columns>
        <columns>ORDER.RECORDTYPE</columns>
        <columns>Customer_Service_Received__c</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>Shipping_Method__c</columns>
        <columns>Location__c</columns>
        <columns>Total_of_Products_on_this_Order__c</columns>
        <columns>ORDER.SHIPPING_STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Location__c</field>
            <operation>startsWith</operation>
            <value>CS Inbox -</value>
        </filters>
        <filters>
            <field>ORDER.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Order.Implants_NA_Orders</value>
        </filters>
        <filters>
            <field>CS_Inbox_Approved__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>PRICEBOOK2.NAME</field>
            <operation>startsWith</operation>
            <value>US IMP</value>
        </filters>
        <label>CAN IMPLANTS CS INBOX ALL Pending</label>
        <sharedTo>
            <role>DNA_Shared_Services</role>
            <role>NA_CRM_Analyst</role>
            <role>NA_Customer_Service_Implants</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CA_CS_INBOX_ALL_Pending</fullName>
        <booleanFilter>2 AND 3 AND 4 AND 5 AND (6 OR (7 AND 8) OR 1)</booleanFilter>
        <columns>Customer_Service_Received__c</columns>
        <columns>ORDERS.LAST_UPDATE</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>Customer_Service_Rep_Responsible__c</columns>
        <columns>Shipping_Method__c</columns>
        <columns>Total_of_Products_on_this_Order__c</columns>
        <columns>ORDER.SHIPPING_STATE</columns>
        <columns>PRICEBOOK2.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Location__c</field>
            <operation>startsWith</operation>
            <value>CS Inbox -</value>
        </filters>
        <filters>
            <field>ORDER.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Order.Direct_global_order</value>
        </filters>
        <filters>
            <field>CS_Inbox_Approved__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>PRICEBOOK2.NAME</field>
            <operation>startsWith</operation>
            <value>CA IMP</value>
        </filters>
        <filters>
            <field>ORDERS.STATUS</field>
            <operation>notEqual</operation>
            <value>Created,Activated,Rejected</value>
        </filters>
        <filters>
            <field>Regional_Manager_Approved__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>total_discount_on_the_order_c__c</field>
            <operation>equals</operation>
            <value>0.0</value>
        </filters>
        <filters>
            <field>Waive_Shipping_Charges__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>CA: CS INBOX ALL Pending</label>
        <sharedTo>
            <group>NA_DI_Customer_Service_and_Mgmt</group>
            <role>DNA_Shared_Services</role>
            <role>NA_CRM_Analyst</role>
            <role>NA_Customer_Service_Implants</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CA_MIS_Orders_Pending</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CreatedByName__c</columns>
        <columns>submitted_date__c</columns>
        <columns>Customer_Service_Received__c</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ProcessStatus__c</columns>
        <columns>ORDERS.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS</field>
            <operation>equals</operation>
            <value>Submitted,Processing</value>
        </filters>
        <filters>
            <field>PRICEBOOK2.NAME</field>
            <operation>equals</operation>
            <value>CA MIS Pricebook</value>
        </filters>
        <filters>
            <field>ProcessStatus__c</field>
            <operation>notEqual</operation>
            <value>Customer Service Processing</value>
        </filters>
        <label>CA: MIS Orders - Pending Approval</label>
        <sharedTo>
            <group>CA_MIS_Orders_CS</group>
            <group>CA_MIS_Pricebook_Access</group>
            <role>NA_CRM_Analyst</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CA_MIS_Orders_for_Processing</fullName>
        <booleanFilter>2 AND 5 AND (1 OR 3 OR 4)</booleanFilter>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CreatedByName__c</columns>
        <columns>submitted_date__c</columns>
        <columns>Customer_Service_Received__c</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ProcessStatus__c</columns>
        <columns>ORDERS.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS</field>
            <operation>equals</operation>
            <value>Processing</value>
        </filters>
        <filters>
            <field>PRICEBOOK2.NAME</field>
            <operation>equals</operation>
            <value>CA MIS Pricebook</value>
        </filters>
        <filters>
            <field>total_discount_on_the_order_c__c</field>
            <operation>equals</operation>
            <value>0.0</value>
        </filters>
        <filters>
            <field>ProcessStatus__c</field>
            <operation>equals</operation>
            <value>Customer Service Processing</value>
        </filters>
        <filters>
            <field>ORDERS.STATUS</field>
            <operation>notEqual</operation>
            <value>Created,Activated,Rejected</value>
        </filters>
        <label>CA: MIS Orders for Processing</label>
        <sharedTo>
            <group>CA_MIS_Orders_CS</group>
            <group>CA_MIS_Pricebook_Access</group>
            <role>NA_CRM_Analyst</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CA_NCO_Orders_Completed</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CreatedByName__c</columns>
        <columns>submitted_date__c</columns>
        <columns>Customer_Service_Date_Time_Completed__c</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>PRICEBOOK2.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Order_Type__c</field>
            <operation>equals</operation>
            <value>Discount on Demand</value>
        </filters>
        <filters>
            <field>ORDERS.STATUS</field>
            <operation>equals</operation>
            <value>Activated</value>
        </filters>
        <filters>
            <field>PRICEBOOK2.NAME</field>
            <operation>equals</operation>
            <value>CA Consumables NCO,CA Ortho NCO</value>
        </filters>
        <label>CA: NCO Orders - Completed</label>
        <sharedTo>
            <role>NA_CRM_Analyst</role>
            <roleAndSubordinatesInternal>CA_Executives</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CA_NCO_Orders_NOT_Submitted</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CreatedByName__c</columns>
        <columns>submitted_date__c</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>PRICEBOOK2.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Order_Type__c</field>
            <operation>equals</operation>
            <value>Discount on Demand</value>
        </filters>
        <filters>
            <field>ORDERS.STATUS</field>
            <operation>equals</operation>
            <value>Created</value>
        </filters>
        <filters>
            <field>PRICEBOOK2.NAME</field>
            <operation>equals</operation>
            <value>CA Consumables NCO,CA Ortho NCO</value>
        </filters>
        <label>CA: NCO Orders - NOT Submitted</label>
        <sharedTo>
            <role>NA_CRM_Analyst</role>
            <roleAndSubordinatesInternal>CA_Executives</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CA_NCO_Orders_Rejected</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CreatedByName__c</columns>
        <columns>submitted_date__c</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>Pricebook_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Order_Type__c</field>
            <operation>equals</operation>
            <value>Discount on Demand</value>
        </filters>
        <filters>
            <field>ORDERS.STATUS</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <filters>
            <field>PRICEBOOK2.NAME</field>
            <operation>equals</operation>
            <value>CA Consumables NCO,CA Ortho NCO</value>
        </filters>
        <label>CA: NCO Orders - Rejected</label>
        <sharedTo>
            <role>NA_CRM_Analyst</role>
            <roleAndSubordinatesInternal>CA_Executives</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CA_NCO_Orders_for_Processing</fullName>
        <booleanFilter>1 AND 3 AND (2 OR 4 OR 6) AND 5</booleanFilter>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CreatedByName__c</columns>
        <columns>submitted_date__c</columns>
        <columns>Customer_Service_Received__c</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>Pricebook_Name__c</columns>
        <columns>ProcessStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Order_Type__c</field>
            <operation>equals</operation>
            <value>Discount on Demand</value>
        </filters>
        <filters>
            <field>ORDERS.STATUS</field>
            <operation>equals</operation>
            <value>Processing</value>
        </filters>
        <filters>
            <field>PRICEBOOK2.NAME</field>
            <operation>equals</operation>
            <value>CA Consumables NCO,CA Ortho NCO</value>
        </filters>
        <filters>
            <field>Total_Order_Discount__c</field>
            <operation>lessOrEqual</operation>
            <value>CAD 500</value>
        </filters>
        <filters>
            <field>ORDERS.STATUS</field>
            <operation>notEqual</operation>
            <value>Created,Activated,Rejected</value>
        </filters>
        <filters>
            <field>ProcessStatus__c</field>
            <operation>equals</operation>
            <value>Customer Service Processing</value>
        </filters>
        <label>CA: NCO Orders for Processing</label>
        <sharedTo>
            <role>NA_CRM_Analyst</role>
            <roleAndSubordinatesInternal>CA_Executives</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CA_Ortho_Retail_For_Processing</fullName>
        <columns>Customer_Service_Received__c</columns>
        <columns>ORDERS.LAST_UPDATE</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>Total_of_Products_on_this_Order__c</columns>
        <columns>Customer_Service_Rep_Responsible__c</columns>
        <columns>Shipping_Method__c</columns>
        <columns>ORDER.SHIPPING_STATE</columns>
        <columns>PRICEBOOK2.NAME</columns>
        <columns>ORDERS.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS</field>
            <operation>notEqual</operation>
            <value>Created,Activated,Rejected</value>
        </filters>
        <filters>
            <field>Pricebook_Name__c</field>
            <operation>equals</operation>
            <value>CA Ortho Pricebook</value>
        </filters>
        <filters>
            <field>ORDER.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Order.Direct_global_order</value>
        </filters>
        <filters>
            <field>ProcessStatus__c</field>
            <operation>equals</operation>
            <value>Customer Service Processing</value>
        </filters>
        <label>CA: FULL PRICE Ortho Orders To Process</label>
        <sharedTo>
            <role>NA_CRM_Analyst</role>
            <roleAndSubordinatesInternal>CA_Executives</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CIS_All_Orders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Geography__c</field>
            <operation>equals</operation>
            <value>Ukraine,Russia,Belarus,Kazakhstan</value>
        </filters>
        <label>CIS: All Orders</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>CIS_CRM_Analyst</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CS_Proj_Team_All_Pending</fullName>
        <booleanFilter>5 OR (1 AND 2 AND 3 AND 4)</booleanFilter>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>Account_Record_Type__c</columns>
        <columns>Location__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>Prospect_at_the_point_of_order_entry__c</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>Total_of_Products_on_this_Order__c</columns>
        <columns>Shipping_Method__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Team_Approval_Required__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CS_Inbox_Approved__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Project_Team_Approved__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ORDERS.STATUS</field>
            <operation>notEqual</operation>
            <value>Created,Activated,Rejected</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>startsWith</operation>
            <value>Proj</value>
        </filters>
        <label>CS Proj Team All Pending</label>
        <language>en_US</language>
        <sharedTo>
            <group>NA_DI_Customer_Service_and_Mgmt</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Copy_of_CA_NCO_Orders_Pending</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CreatedByName__c</columns>
        <columns>submitted_date__c</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>Pricebook_Name__c</columns>
        <columns>ProcessStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Order_Type__c</field>
            <operation>equals</operation>
            <value>Discount on Demand</value>
        </filters>
        <filters>
            <field>ORDERS.STATUS</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>PRICEBOOK2.NAME</field>
            <operation>equals</operation>
            <value>CA Consumables NCO,CA Ortho NCO</value>
        </filters>
        <label>CA: NCO Orders - Pending</label>
        <sharedTo>
            <role>NA_CRM_Analyst</role>
            <roleAndSubordinatesInternal>CA_Executives</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DACH_VDW_Handling_Test_Orders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>SourceRecord__c</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>Order_Owner__c</columns>
        <columns>Communication_to_Customer_Service__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>DE,AT,CH</value>
        </filters>
        <filters>
            <field>ORDERS.STATUS</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>PRICEBOOK2.NAME</field>
            <operation>contains</operation>
            <value>VDW - Price Book Handlingtest</value>
        </filters>
        <label>DACH: VDW Handling Test Orders</label>
        <language>en_US</language>
        <sharedTo>
            <group>DACH_VDW_Customer_Care_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DE_PRE_incoming_orders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>Order_Owner__c</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>Order_Amount_global__c</columns>
        <columns>Amount_of_free_of_charge_products__c</columns>
        <columns>total_discount_on_the_order_c__c</columns>
        <columns>Sample_Order__c</columns>
        <columns>Customer_Service_Received__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDER.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Order.Indirect_global_order,Order.Direct_global_order</value>
        </filters>
        <filters>
            <field>UserCountryETM__c</field>
            <operation>equals</operation>
            <value>Germany,Austria</value>
        </filters>
        <filters>
            <field>ORDERS.STATUS</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>Customer_Service_Received__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Customer_Service_Date_Time_Completed__c</field>
            <operation>equals</operation>
        </filters>
        <label>DE: PRE incoming orders</label>
        <language>en_US</language>
        <sharedTo>
            <group>AT_DE_PRE_CustomerService</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Direct_global_order</fullName>
        <active>true</active>
        <label>Direct global order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Free_Good_Order</fullName>
        <active>true</active>
        <label>Free Good Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Implants_NA_Orders</fullName>
        <active>true</active>
        <description>Existing Implants NA Orders - to be discontinued in 2018</description>
        <label>Implants NA Orders</label>
    </recordTypes>
    <recordTypes>
        <fullName>Indirect_global_order</fullName>
        <active>true</active>
        <label>Indirect global order</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Customer_Service_Backorder</fullName>
        <active>true</active>
        <description>Movex Order number is populated, Backorder Notes must be populated.</description>
        <errorConditionFormula>AND(Not(Isblank(  Movex_Order_Number__c  )),  LEN( Backorder_Notes__c ) &lt; 3)</errorConditionFormula>
        <errorDisplayField>Backorder_Notes__c</errorDisplayField>
        <errorMessage>Please be sure to populate the Back Order Notes field (Even if there are no backorders!) before saving!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_Service_Movex</fullName>
        <active>false</active>
        <description>If Customer Service Time/Date is populated, Movex Order Number must be populated.</description>
        <errorConditionFormula>AND(Not(Isblank(  Backorder_Notes__c  )),  Isblank( Movex_Order_Number__c ))</errorConditionFormula>
        <errorDisplayField>Movex_Order_Number__c</errorDisplayField>
        <errorMessage>Please be sure to populate the Movex order number field before saving!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_Service_Responsible</fullName>
        <active>false</active>
        <description>If Customer Service Time/Date is populated, Customer Service Responsible must be populated.</description>
        <errorConditionFormula>AND(Not(Isblank( Customer_Service_Received__c )),  Isblank(Customer_Service_Rep_Responsible__c))</errorConditionFormula>
        <errorDisplayField>Customer_Service_Rep_Responsible__c</errorDisplayField>
        <errorMessage>Please be sure to populate the Customer Service Rep Responsible field before saving!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IN_Dealer_validation</fullName>
        <active>false</active>
        <description>Check that a dealer is added to the order</description>
        <errorConditionFormula>AND(ISPICKVAL(Account.Country__c, &apos;IN&apos;),  ISBLANK(Distributor__c),  Order_Amount_global__c &gt; 0)</errorConditionFormula>
        <errorDisplayField>Distributor__c</errorDisplayField>
        <errorMessage>Please add a distributor to the order</errorMessage>
    </validationRules>
</CustomObject>